--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail-terbuka.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail-terbuka.html
@@ -1098,7 +1098,7 @@
             </ul>
             <div class="box box-white">
                 <div class="box-header with-border">
-                    <h3 class="box-title text-blue-mtf box-riwayat"><a href="riwayat-pengadaan.html">Riwayat</a></h3>
+                    <h3 class="box-title text-blue-mtf box-riwayat"><a href="#">Riwayat</a></h3>
                 </div>
                 <div class="box-body" ng-controller="history">
                     <ul class="products-list product-list-in-box">
