--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -1037,7 +1037,7 @@
                             <div class="riwayat-info">
                                 <span class="title"><a href="#" ng-bind="histori.Nama"></a></span>
                                 <span class="pegadaan-description" ng-bind="histori.ActionDate| date:'dd/MM/yyyy h:mm:ss'"></span>
-                                <span class="pegadaan-description" ng-bind="histori.Status"></span>
+                                <span class="pegadaan-description" data-toggle="tooltip" title="histori.Status" ng-bind="histori.Status"></span>
 
                                 <span class="pegadaan-item" ng-bind="histori.Comment">
                                 </span>
