List PKS, Create PKS,

--- a/MTF_x/Views/Home/Announcement.cshtml
+++ b/MTF_x/Views/Home/Announcement.cshtml
@@ -33,7 +33,7 @@
                                                     No. Nota Internal
                                                 </th>
                                                 <th>
-                                                    Hps
+                                                    Pagu
                                                 </th>
                                                 <th>
                                                     Akhir Pendaftaran
