--- a/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
+++ b/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
@@ -133,7 +133,7 @@
                                 <input type="hidden" id="pengadaanId" />
                                 <input type="hidden" id="isTeam" />
                                 <input type="hidden" id="isCreated" />
-                                <input type="hidden" id="status" value="draf">
+                                <input type="hidden" id="status" value="DRAF">
                                 <div class="box-body">
                                     <div class="row">
                                         <div class="col-md-10">
@@ -168,7 +168,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
-                                            <label class="title">No. Kontrak:</label>
+                                            <label class="title">No. SPK:</label>
                                             <input type="text" class="form-control" id="no-kontrak">
                                         </div>
                                         <div class="form-group col-md-4">
