--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -167,7 +167,7 @@
                                         </div>
                                         <div class="form-group col-md-6">
                                             <label class="title">Aturan Penawaran:</label>
-                                            <select class="form-control select2" name="AturanPenawaran" style="width: 100%;">
+                                            <select class="form-control select2" name="AturanPenawaran" style="width: 100%;" disabled>
                                                 <option value="Price Matching">Price Matching</option>
                                                 <option value="Open Price">Open Price</option>
                                             </select>
