--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -512,13 +512,13 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row">
+                                                                    <!--<div class="row">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Kehadiran</label>
                                                                             </div>
                                                                         </div>
-                                                                    </div>
+                                                                    </div>-->
                                                                     <hr />
                                                                     <div class="row kehadiran-kandidat">
 
