--- a/Reston.EProc.Runner.IIS/View/rekanan-monitoring.html
+++ b/Reston.EProc.Runner.IIS/View/rekanan-monitoring.html
@@ -81,7 +81,9 @@
                     </a>
                     <div class="navbar-custom-menu pull-left">
                         <ul class="nav navbar-nav">
-                            <li>	<a id="judul-page" href="#">Sistem Monitoring</a></li>
+                            <li>
+                                <a id="judul-page" href="#">Monitoring</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="navbar-custom-menu">
@@ -120,70 +122,21 @@
                     <div class="box-body form-horizontal">
                         <div class="box">
                             <div class="box-header with-border">
-                                <h3 class="box-title">Sistem Monitoring</h3>
+                                <h3 class="box-title">Monitoring Ikut Serta</h3>
                                 <div class="box-tools pull-right"></div>
                             </div>
                             <div class="box-body">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <div class="col-md-5">
-                                            <form class="form-horizontal label-kanan">
-                                                <div class="form-group">
-                                                    <label class="col-sm-3 control-label">Judul</label>
-                                                    <div class="col-sm-8">
-                                                        <input id="title" type="text" class="form-control " placeholder="Judul">
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label class="col-sm-3 control-label">Klasifikasi</label>
-                                                    <div class="col-sm-8">
-                                                        <select id="klasifikasi" class="form-control select2" style="width: 100%;">
-                                                            <option selected="selected" value="">All</option>
-                                                            <option value="0">SIPIL</option>
-                                                            <option value="1">NONSIPIL</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                            </form>
+                                        <div class="form-group">
+                                            <div class="col-sm-3">
+                                                <input id="title" type="text" class="form-control " placeholder="Search...">
+                                            </div>
                                         </div>
-                                        <div class="col-md-6">
-                                            <div class="col-sm-8">
-                                                <label class="control-label"><h4>Total Proyek Dalam Pelaksanaan</h4></label>
-                                            </div>
-                                            <div class="col-sm-4">
-                                                <label class="control-label"><h4 class="text-bold" style="color:blue;" name="dalam-pelaksanaan"></h4></label><div class="clearfix"></div>
-                                            </div>
-                                            <div class="col-sm-8">
-                                                <label class="control-label"><h4>Total Proyek Lewat Waktu Pelaksanaan</h4></label>
-                                            </div>
-                                            <div class="col-sm-4">
-                                                <label class="control-label"><h4 class="text-bold" style="color:red;" name="lewat-waktu">5</h4></label><div class="clearfix"></div>
-                                            </div>
-                                            <div class="col-sm-8">
-                                                <label class="control-label"><h4>Total Proyek Mendekati Waktu Pelaksanaan</h4></label>
-                                            </div>
-                                            <div class="col-sm-4">
-                                                <label class="control-label"><h4 class="text-bold" style="color:orange;" name="mendekati-waktu">4</h4></label>
-                                            </div>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                    </div>
-                                </div>
-                                <div class="row ">
-                                    <div class="col-md-12">
-                                        <div class="submitgray button-row">
-                                            <button id="cari" class="btn btn-primary " type="submit">Cari</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="box-body">
-                                <div class="row">
-                                    <div class="col-md-12">
                                         <table id="example1" class="table table-bordered">
                                             <thead>
                                                 <tr>
-                                                    <td class="tengah text-bold">No. PKS</td>
+                                                    <td class="tengah text-bold">No. SPK</td>
                                                     <td class="rata_kiri text-bold">Nama Proyek</td>
                                                     <td class="tengah text-bold">Pelaksana</td>
                                                     <td class="tengah text-bold">Klasifikasi</td>
@@ -201,7 +154,7 @@
                     </div>
                 </div>
             </section><!-- /.content -->
-        </div><!-- /.content-wrapper -->    
+        </div><!-- /.content-wrapper -->
         <div class="control-sidebar-bg"></div>
     </div><!-- ./wrapper -->
 
@@ -246,7 +199,6 @@
     <script src="dist/js/app.min.js"></script>
     <script src="plugins/angular/angular.min.js"></script>
     <script src="dist/js/menu.js"></script>
-    <script src="dist/js/pengadaan-list.js"></script>
     <script src="blockui/jquery.blockUI.js"></script>
     <script>
         // fungsi table
@@ -256,19 +208,19 @@
                 "serverSide": true,
                 "searching": false,
                 "ajax": {
-                    "url": 'api/MonitoringSelection/ListProyek',
+                    "url": 'api/MonitoringSelection/ListProyekRekanan',
                     "type": 'POST',
                     "data": function (d) {
+                        d.id = isGuid;
                         d.search = "";
                         d.klasifikasi = "";
+                        console.log(d);
                     },
                     "error": function (jqXHR, textStatus, errorThrown) {
-                        // $('#example1').DataTable().clear().draw();
                     }
                 },
-                //"ajax": 'api/MonitoringSelection/List?search=' + $("#search").val(),
                 "columns": [
-                    { "data": "null" },
+                    { "data": "NOSPK" },
                     { "data": "NamaProyek" },
                     { "data": "NamaPelaksana" },
                     { "data": "Klasifikasi" },
@@ -279,23 +231,30 @@
                 "columnDefs": [
                     {
                         "render": function (data, type, row) {
-                            return "";
+                            return "<a href='sistem-monitoring-detail-rekanan.html?Id=" + row.id + "'>" + row.NamaProyek + "</a>";
+                        },
+                        "targets": 1,
+                        "orderable": false
+                    },
+                    {
+                        "render": function (data, type, row) {
+                            return "10%";
+                        },
+                        "targets": 4,
+                        "orderable": false
+                    },
+                    {
+                        "render": function (data, type, row) {
+                            return "10%";
                         },
                         "targets": 5,
                         "orderable": false
                     },
                     {
                         "render": function (data, type, row) {
-                            return "";
+                            return "10%";
                         },
                         "targets": 6,
-                        "orderable": false
-                    },
-                    {
-                        "render": function (data, type, row) {
-                            return "<a href='sistem-monitoring-detail.html?Id="+row.id+"'>" + row.NamaProyek + "</a>";
-                        },
-                        "targets": 1,
                         "orderable": false
                     },
                 ],
@@ -324,6 +283,5 @@
         })
     </script>
     <!-- AdminLTE App <script src="dist/js/app.min.js"></script> -->
-
 </body>
 </html>
