--- a/Reston.EProc.Runner.IIS/View/rks.html
+++ b/Reston.EProc.Runner.IIS/View/rks.html
@@ -407,7 +407,7 @@
                      },
                      {
                          "render": function (data, type, row) {
-                             return '<a href="#" idRks="' + row.Id + '" class="btn btn-xs btn-primary pilih" title="pilih">Pilih RKS</a> ';
+                             return '<button idRks="' + row.Id + '" class="btn btn-xs btn-primary pilih" title="pilih">Pilih RKS</a> ';
                          },
                          "targets": 3,
                          "orderable": false
@@ -430,8 +430,12 @@
                      dataType: "json",
                      contentType: 'application/json; charset=utf-8',
                      success: function (data) {
-                         waitingDialog.hideloading();
+                         listTableRks.draw();
+                         $("#modal-load-rks").modal("hide");
+                         window.location.href = "http://" + window.location.host + "/rks.html#" + $("#pengadaanId").val();
                          window.location.reload();
+                         waitingDialog.hideloading();
+                         
                      }
                  });
              });
